Update DST server

--- a/system/bitdizzy.io/dontstarve/cluster.ini
+++ b/system/bitdizzy.io/dontstarve/cluster.ini
@@ -9,14 +9,14 @@ pause_when_empty = true
 cluster_description = Live heroically, live with style
 cluster_name = Sekai no Hate
 cluster_intention = cooperative
-cluster_password = uwu
+cluster_password = @PASSWORD@
 
 [MISC]
 console_enabled = true
 
 [SHARD]
 shard_enabled = true
-bind_ip = 0.0.0.0
-master_ip = 0.0.0.0
-master_port = 10889
+bind_ip = 127.0.0.1
+master_ip = 127.0.0.1
+master_port = 11000
 cluster_key = PA/+/oCdXQKKEwocuMwLufa/NDdrh9qW+RQTfmJAk7A
